@@ -264,7 +264,7 @@ result indicator[measure="2"] period actual:before	{content:"ACTUAL %"; font-siz
 result indicator period target, result indicator period actual	{display:inline-block; vertical-align:top; width:440px;}
 
 result indicator period period-start,
-result indicator period period-end	{display:block; width:100%; padding:0 0 10px 0; min-height:38px; box-sizing:border-box; font-size:22px; line-height:28px; text-align:right; position:relative;}
+result indicator period period-end	{display:block; width:100%; padding:0 0 10px 0; min-height:38px; box-sizing:border-box; font-size:16px; line-height:28px; text-align:right; position:relative;}
 result indicator period period-start{margin-bottom:10px;}
 
 result indicator period target > *	{display:block;}
