@@ -8,6 +8,8 @@ Update all themes and print-friendly css
 Sticky headers tryout
 Chartists in SAVi tryout
 Update css for chartists
+Update padding (n+2) participating-org 
+Change font-size for result dates in SAVi
 
 
 Development Portal (2019-01-04 shi)
